<resources>
    <string name="app_name">cs213-project-5</string>
    <string name="specialty_btn">Specialty Pizza</string>
    <string name="byo_btn">Build Your Own Pizza</string>
    <string name="store_orders_btn">Store Orders</string>
    <string name="current_order_btn">Current Order</string>
    <string name="pizza1">Pepperoni</string>
    <string name="byo_title">Build Your Own Pizza</string>
    <string name="select_topps">Select Toppings</string>
    <string name="select_sauce">Select Sauce</string>
    <string name="select_size">Select Size</string>
    <string name="extra_sauce">Extra Sauce</string>
    <string name="extra_cheese">Extra Cheese</string>
    <string name="addOrder">Add To Order</string>
    <string name="price">Price: $</string>
    <string name="byoprice">8.99</string>
    <string name="order_header">Current Order</string>
    <string name="order_btn">Place Order</string>
    <string name="remove_btn">Remove Item</string>
    <string name="so_title">Store Orders</string>
    <string name="order_number">Order Number</string>
    <string name="cancel_btn">Cancel Order</string>
    <string name="default_price_zero">0.00</string>
</resources>