<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">
    <Button
            android:text="@string/store_orders_btn"
            android:layout_width="175dp"
            android:layout_height="wrap_content" android:id="@+id/storeOrdersBtn"
            app:layout_constraintTop_toBottomOf="@+id/currentOrderBtn"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="128dp"/>
    <Button
            android:text="@string/current_order_btn"
            android:layout_width="175dp"
            android:layout_height="wrap_content" android:id="@+id/currentOrderBtn"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="128dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/byoBtn"/>
    <Button
            android:text="@string/byo_btn"
            android:layout_width="175dp"
            android:layout_height="wrap_content" android:id="@+id/byoBtn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="128dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/specialtyBtn"/>
    <Button
            android:text="@string/specialty_btn"
            android:layout_width="175dp"
            android:layout_height="wrap_content" android:id="@+id/specialtyBtn"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="128dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="4dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>