<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CurrentOrderActivity">

    <TextView android:text="@string/order_header"
              android:id="@+id/orderHeader"
              android:textSize="30sp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="100dp"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="100dp"/>

    <ListView android:layout_width="403dp"
              android:layout_height="400dp"
              android:id="@+id/currentOrderListView"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="5dp" app:layout_constraintTop_toTopOf="parent"
              android:layout_marginTop="100dp"/>

    <Button android:layout_width="183dp" android:layout_height="71dp"
            android:text="@string/order_btn"
            android:id="@+id/placeOrderBtn"
            android:onClick="addOrderBtnClick"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="3dp"/>
    <Button
            android:text="@string/remove_btn"
            android:layout_width="156dp"
            android:layout_height="73dp" android:id="@+id/removeItemBtn"
            android:onClick="onRemoveBtnClick"
            android:layout_marginEnd="6dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="1dp"/>
    <TextView
            android:text=""
            android:id="@+id/subtotal"
            android:textSize="24sp"
            android:layout_width="183dp"
            android:layout_height="53dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginBottom="92dp" app:layout_constraintBottom_toTopOf="@+id/placeOrderBtn"/>
    <TextView
            android:text=""
            android:textSize="24sp"
            android:layout_width="155dp"
            android:layout_height="54dp" android:id="@+id/tax"
            android:layout_marginEnd="18dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="19dp"
            app:layout_constraintBottom_toTopOf="@+id/total"/>
    <TextView
            android:text=""
            android:textSize="24sp"
            android:layout_width="192dp"
            android:layout_height="60dp" android:id="@+id/total"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/removeItemBtn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="119dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>